--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 package-lock.json
+node_modules
 node_modules/source-map-support/node_modules/source-map/lib/binary-search.js
 node_modules/.bin/babel-node
 node_modules/.bin/babel-node.cmd
