--- a/.gitignore
+++ b/.gitignore
@@ -4996,3 +4996,29 @@ node_modules/v8flags/index.js
 node_modules/v8flags/LICENSE
 node_modules/v8flags/package.json
 node_modules/v8flags/README.md
+Calender-master.zip
+Calender-master/public/manifest.json
+Calender-master/.gitignore
+Calender-master/package.json
+Calender-master/README.md
+Calender-master/yarn.lock
+Calender-master/public/favicon.ico
+Calender-master/public/index.html
+Calender-master/public/json/data1.json
+Calender-master/public/json/data2.json
+Calender-master/public/json/data3.json
+Calender-master/public/json/data4.json
+Calender-master/src/App.css
+Calender-master/src/App.js
+Calender-master/src/App.test.js
+Calender-master/src/Calender.js
+Calender-master/src/index.css
+Calender-master/src/index.js
+Calender-master/src/logo.svg
+Calender-master/src/serviceWorker.js
+Calender-master/src/style.scss
+Calender-master/src/usage.js
+Calender-master/src/json/data1.json
+Calender-master/src/json/data2.json
+Calender-master/src/json/data3.json
+Calender-master/src/json/data4.json
