--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .cache
 dist
+webpack-demo-app
 package-lock.json
 node_modules
 node_modules/source-map-support/node_modules/source-map/lib/binary-search.js
