--- a/Stephen Grider_TS/web/package.json
+++ b/Stephen Grider_TS/web/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.19.0",
     "concurrently": "^4.1.2",
     "nodemon": "^1.19.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "typescript": "^3.6.3"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:db": "json-server -w db.json",
+    "start:parcel": "parcel index.html"
   },
   "keywords": [],
   "author": "",
