--- a/Colt Steele_React/pokedex/package.json
+++ b/Colt Steele_React/pokedex/package.json
@@ -7,6 +7,7 @@
     "@types/node": "12.7.11",
     "@types/react": "16.9.5",
     "@types/react-dom": "16.9.1",
+    "@types/react-lazyload": "^2.5.0",
     "axios": "^0.19.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
