--- a/songs/package.json
+++ b/songs/package.json
@@ -1,13 +1,18 @@
 {
-  "name": "song",
+  "name": "songs",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "@types/jest": "24.0.20",
+    "@types/node": "12.11.7",
+    "@types/react": "16.9.11",
+    "@types/react-dom": "16.9.3",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
-    "react-scripts": "3.1.2",
-    "redux": "^4.0.4"
+    "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
+    "typescript": "3.6.4"
   },
   "scripts": {
     "start": "react-scripts start",
