--- a/blog/package.json
+++ b/blog/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "3.2.0",
     "react-thunk": "^1.0.0",
     "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "typescript": "3.6.4"
   },
   "scripts": {
