--- a/blog/package.json
+++ b/blog/package.json
@@ -4,16 +4,17 @@
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.21",
+    "@types/lodash": "^4.14.145",
     "@types/node": "12.12.3",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.3",
     "@types/react-redux": "^7.1.5",
     "axios": "^0.19.0",
+    "lodash": "^4.17.15",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
     "react-scripts": "3.2.0",
-    "react-thunk": "^1.0.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "typescript": "3.6.4"
