--- a/streams/client/package.json
+++ b/streams/client/package.json
@@ -35,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/gapi.client.oauth2": "^2.0.1"
   }
 }
